<?xml version="1.0" encoding="UTF-8"?>
<!--
Licensed to the Apache Software Foundation (ASF) under one
or more contributor license agreements.  See the NOTICE file
distributed with this work for additional information
regarding copyright ownership.  The ASF licenses this file
to you under the Apache License, Version 2.0 (the
"License"); you may not use this file except in compliance
with the License.  You may obtain a copy of the License at

  http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing,
software distributed under the License is distributed on an
"AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
KIND, either express or implied.  See the License for the
specific language governing permissions and limitations
under the License.
-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  
  <parent>
    <groupId>org.apache.netbeans</groupId>
    <artifactId>netbeans-parent</artifactId>
    <version>5</version>
  </parent>
  
  <groupId>org.apache.netbeans</groupId>
  <artifactId>nbpackage</artifactId>
  <version>1.0-beta7-SNAPSHOT</version>
  <packaging>jar</packaging>
  
  <name>Apache NetBeans NBPackage</name>
  <url>https://bits.netbeans.org/nbpackage/</url>
  <description>Apache NetBeans packaging utility.</description>
  
  <scm>
    <connection>scm:git:https://gitbox.apache.org/repos/asf/netbeans-nbpackage.git</connection>
    <developerConnection>scm:git:https://gitbox.apache.org/repos/asf/netbeans-nbpackage.git</developerConnection>
    <url>https://github.com/apache/netbeans-nbpackage</url>
    <tag>HEAD</tag>
  </scm>
  <distributionManagement>
    <site>
      <id>netbeans.bits</id>
      <url>https://bits.netbeans.org/nbpackage</url>
    </site>
  </distributionManagement>  
  <dependencies>
    <dependency>
      <groupId>info.picocli</groupId>
      <artifactId>picocli</artifactId>
      <version>4.7.7</version>
    </dependency>
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-compress</artifactId>
      <version>1.28.0</version>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <version>${junit.jupiter.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-params</artifactId>
      <version>${junit.jupiter.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <version>${junit.jupiter.version}</version>
      <scope>test</scope>
    </dependency>
  </dependencies>
  
  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-javadoc-plugin</artifactId>
          <version>3.11.3</version>
          <configuration>
            <release>17</release>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.14.0</version>
        <configuration>
          <release>17</release>
          <compilerArgs>
            <arg>-Xlint</arg>
            <!-- tests have no module-info -->
            <arg>-Xlint:-exports</arg>
          </compilerArgs>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.5.3</version>
      </plugin>
      <plugin>
        <groupId>org.apache.rat</groupId>
        <artifactId>apache-rat-plugin</artifactId>
        <configuration>
          <excludes>
            <!-- exclude template files - no creativity; currently no way to filter out license --> 
            <exclude>**/*.template</exclude>
            <!-- exclude Apache NetBeans SVG - license header causes display issues on certain OS -->
            <exclude>**/apache-netbeans.svg</exclude>
            <!-- exclude NetBeans configuration files, not in source bundle -->
            <exclude>nbactions.xml</exclude>
            <exclude>nb-configuration.xml</exclude>
            <!-- misc excludes -->
            <exclude>README.md</exclude>
            <exclude>src/assembly/bin/BINARY_NOTICE</exclude>
          </excludes>
        </configuration>
        <executions>
          <execution>
            <goals>
              <goal>check</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <!-- skip to ensure use of NOTICE and LICENSE from repository -->
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-remote-resources-plugin</artifactId>
        <configuration>
          <skip>true</skip>
        </configuration>
      </plugin>
      <plugin>
        <!-- add NOTICE and LICENSE from repository to apidoc -
          see also resources configuration below for source and binary jar -->
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-resources-plugin</artifactId>
        <executions>
          <execution>
            <id>licensenoticecopy</id>
            <phase>generate-resources</phase>
            <goals>
              <goal>copy-resources</goal>
            </goals>
            <configuration>
              <outputDirectory>${project.build.directory}/apidocs/META-INF</outputDirectory>
              <resources>
                <resource>
                  <directory>${basedir}</directory>
                  <includes>
                    <include>NOTICE</include>
                    <include>LICENSE</include>
                  </includes>
                </resource>
              </resources>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-assembly-plugin</artifactId>
        <version>3.7.1</version>
        <executions>
          <execution>
            <id>make-src</id>
            <phase>package</phase>
            <goals>
              <goal>single</goal>
            </goals>
            <configuration>
              <descriptors>
                <descriptor>${basedir}/src/assembly/src.xml</descriptor>
              </descriptors>
              <attach>false</attach>
            </configuration>
          </execution>
          <execution>
            <id>make-bin</id>
            <phase>package</phase>
            <goals>
              <goal>single</goal>
            </goals>
            <configuration>
              <descriptors>
                <descriptor>${basedir}/src/assembly/bin.xml</descriptor>
              </descriptors>
            </configuration>
          </execution>
          <execution>
            <id>make-bin-dir</id>
            <phase>package</phase>
            <goals>
              <goal>single</goal>
            </goals>
            <configuration>
              <descriptors>
                <descriptor>${basedir}/src/assembly/dir.xml</descriptor>
              </descriptors>
              <appendAssemblyId>false</appendAssemblyId>
              <attach>false</attach>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-site-plugin</artifactId>
        <version>4.0.0-M13</version>
        <configuration>
          <topSiteURL>${project.distributionManagement.site.url}</topSiteURL>
        </configuration>
      </plugin>
    </plugins>
    <resources>
      <resource>
        <directory>src/main/resources</directory>
      </resource>
      <!-- include NOTICE and LICENSE from repository inside META-INF -->
      <resource>
        <directory>${basedir}</directory>
        <targetPath>META-INF</targetPath>
        <includes>
          <include>NOTICE</include>
          <include>LICENSE</include>
        </includes>
      </resource>
    </resources>
  </build>
 
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <junit.jupiter.version>5.13.4</junit.jupiter.version>
    <skin.groupId>org.apache.maven.skins</skin.groupId>
    <skin.artifactId>maven-fluido-skin</skin.artifactId>
    <skin.version>2.0.0-M8</skin.version>
  </properties>
</project>
